force-app/main/default/objects/Expenditure__c/Expenditure__c.object-meta.xml
<CustomObject>
    <description>A summary of the purchased item</description>
    <label>Expenditure</label>
    <nameField>
        <displayFormat>E-{000000}</displayFormat>
        <label>Expenditure Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenditures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>