force-app/main/default/objects/Expenditure__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The account this expense record is related to</description>
    <inlineHelpText>The account this expense record is related to</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Expenditures</relationshipLabel>
    <relationshipName>Expenditures</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>