force-app/main/default/objects/Expenditure__c/fields/Bank__c.field-meta.xml
<CustomField>
    <fullName>Bank__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The related bank this expense record has withdrawn funds from</description>
    <inlineHelpText>The related bank this expense record has withdrawn funds from</inlineHelpText>
    <label>Bank</label>
    <referenceTo>Bank__c</referenceTo>
    <relationshipLabel>Expenditures</relationshipLabel>
    <relationshipName>Expenditures</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>