force-app/main/default/objects/Expenditure__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>A short description about this expenditure record</description>
    <inlineHelpText>A short description about this expenditure record</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>