force-app/main/default/objects/Expenditure__c/fields/Expense_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Expense_DateTime__c</fullName>
    <description>The spending date and time</description>
    <inlineHelpText>The spending date and time</inlineHelpText>
    <label>Expense DateTime</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>